--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "@docusaurus/plugin-pwa": "3.7.0",
         "@docusaurus/preset-classic": "3.7.0",
         "@mdx-js/react": "^3.0.0",
-        "@nx/webpack": "^16.7.4",
+        "@nx/webpack": "20.4.6",
         "@prisma/client": "^6.4.1",
         "@wildboar/acse": "^1.0.7",
         "@wildboar/cms": "^1.0.6",
@@ -67,7 +67,7 @@
         "dotenv": "^16.0.3",
         "email-addresses": "^5.0.0",
         "escape-html": "^1.0.3",
-        "express": "5.x.x",
+        "express": "4.21.2",
         "express-handlebars": "8.x.x",
         "express-session": "^1.18.0",
         "fast-levenshtein": "^3.0.0",
@@ -101,25 +101,25 @@
     },
     "devDependencies": {
         "@docusaurus/module-type-aliases": "3.7.0",
-        "@nx/eslint-plugin": "16.7.4",
-        "@nx/jest": "16.7.4",
-        "@nx/js": "16.7.4",
-        "@nx/linter": "16.7.4",
-        "@nx/node": "16.7.4",
-        "@nx/workspace": "16.7.4",
+        "@nx/eslint": "20.4.6",
+        "@nx/eslint-plugin": "20.4.6",
+        "@nx/jest": "20.4.6",
+        "@nx/js": "20.4.6",
+        "@nx/node": "20.4.6",
+        "@nx/workspace": "20.4.6",
         "@types/bluebird": "^3.5.38",
         "@types/cookie-parser": "^1.4.3",
         "@types/csurf": "^1.11.2",
         "@types/escape-html": "^1.0.2",
-        "@types/express": "^4.17.21",
+        "@types/express": "4.17.21",
         "@types/express-session": "^1.17.5",
         "@types/fast-levenshtein": "^0.0.2",
         "@types/flat": "^5.0.2",
-        "@types/jest": "29.4.4",
+        "@types/jest": "29.5.14",
         "@types/js-yaml": "^4.0.5",
         "@types/json-schema": "^7.0.11",
         "@types/koa": "^2.15.0",
-        "@types/node": "18.11.18",
+        "@types/node": "18.19.9",
         "@types/passport-local": "^1.0.34",
         "@types/passport-strategy": "^0.2.35",
         "@types/safe-regex": "^1.1.4",
@@ -130,10 +130,9 @@
         "@typescript-eslint/parser": "5.62.0",
         "eslint": "8.46.0",
         "eslint-config-prettier": "8.6.0",
-        "jest": "29.4.3",
+        "jest": "29.7.0",
         "json-schema-to-typescript": "^11.0.2",
-        "nx": "16.7.4",
-        "nx-cloud": "16.3.0",
+        "nx": "20.4.6",
         "prettier": "2.8.3",
         "prettier-plugin-organize-imports": "^3.2.2",
         "prisma": "^6.4.1",
