--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,14 +30,18 @@
                 "@typescript-eslint/no-inferrable-types": "off",
                 "@typescript-eslint/no-non-null-assertion": "off",
                 "@typescript-eslint/no-empty-interface": "off",
-                "@typescript-eslint/no-empty-function": "off"
+                "@typescript-eslint/no-empty-function": "off",
+                "@typescript-eslint/no-extra-semi": "error",
+                "no-extra-semi": "off"
             }
         },
         {
             "files": ["*.js", "*.jsx"],
             "extends": ["plugin:@nx/javascript"],
             "rules": {
-                "no-inner-declarations": "off"
+                "no-inner-declarations": "off",
+                "@typescript-eslint/no-extra-semi": "error",
+                "no-extra-semi": "off"
             }
         }
     ]
