--- a/libs/osi-net/project.json
+++ b/libs/osi-net/project.json
@@ -3,6 +3,7 @@
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "libs/osi-net/src",
     "projectType": "library",
+    "tags": [],
     "targets": {
         "build": {
             "executor": "@nx/js:tsc",
@@ -12,8 +13,7 @@
                 "tsConfig": "libs/osi-net/tsconfig.lib.json",
                 "packageJson": "libs/osi-net/package.json",
                 "main": "libs/osi-net/src/index.ts",
-                "assets": ["libs/osi-net/*.md"],
-                "updateBuildableProjectDepsInPackageJson": true
+                "assets": ["libs/osi-net/*.md"]
             }
         },
         "lint": {
@@ -27,10 +27,8 @@
             "executor": "@nx/jest:jest",
             "outputs": ["{workspaceRoot}/coverage/libs/osi-net"],
             "options": {
-                "jestConfig": "libs/osi-net/jest.config.ts",
-                "passWithNoTests": true
+                "jestConfig": "libs/osi-net/jest.config.ts"
             }
         }
-    },
-    "tags": []
+    }
 }
