--- a/libs/rose-transport/project.json
+++ b/libs/rose-transport/project.json
@@ -3,6 +3,7 @@
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "libs/rose-transport/src",
     "projectType": "library",
+    "tags": [],
     "targets": {
         "build": {
             "executor": "@nx/js:tsc",
@@ -11,8 +12,7 @@
                 "outputPath": "dist/libs/rose-transport",
                 "main": "libs/rose-transport/src/index.ts",
                 "tsConfig": "libs/rose-transport/tsconfig.lib.json",
-                "assets": ["libs/rose-transport/*.md"],
-                "updateBuildableProjectDepsInPackageJson": true
+                "assets": ["libs/rose-transport/*.md"]
             }
         },
         "publish": {
@@ -37,10 +37,8 @@
             "executor": "@nx/jest:jest",
             "outputs": ["{workspaceRoot}/coverage/libs/rose-transport"],
             "options": {
-                "jestConfig": "libs/rose-transport/jest.config.ts",
-                "passWithNoTests": true
+                "jestConfig": "libs/rose-transport/jest.config.ts"
             }
         }
-    },
-    "tags": []
+    }
 }
