--- a/libs/x500-client-ts/project.json
+++ b/libs/x500-client-ts/project.json
@@ -3,6 +3,7 @@
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "libs/x500-client-ts/src",
     "projectType": "library",
+    "tags": [],
     "targets": {
         "build": {
             "executor": "@nx/js:tsc",
@@ -11,8 +12,7 @@
                 "outputPath": "dist/libs/x500-client-ts",
                 "main": "libs/x500-client-ts/src/index.ts",
                 "tsConfig": "libs/x500-client-ts/tsconfig.lib.json",
-                "assets": ["libs/x500-client-ts/*.md"],
-                "updateBuildableProjectDepsInPackageJson": true
+                "assets": ["libs/x500-client-ts/*.md"]
             },
             "dependsOn": [
                 {
@@ -43,10 +43,8 @@
             "executor": "@nx/jest:jest",
             "outputs": ["{workspaceRoot}/coverage/libs/x500-client-ts"],
             "options": {
-                "jestConfig": "libs/x500-client-ts/jest.config.ts",
-                "passWithNoTests": true
+                "jestConfig": "libs/x500-client-ts/jest.config.ts"
             }
         }
-    },
-    "tags": []
+    }
 }
