--- a/package.json
+++ b/package.json
@@ -61,8 +61,7 @@
         "class-validator": "^0.14.0",
         "clsx": "^1.2.1",
         "commander": "^10.0.0",
-        "cookie-parser": "1.4.6",
-        "csurf": "1.11.0",
+        "cookie-parser": "1.4.7",
         "date-fns": "^2.29.3",
         "dotenv": "^16.0.3",
         "email-addresses": "^5.0.0",
@@ -109,7 +108,6 @@
         "@nx/workspace": "20.4.6",
         "@types/bluebird": "^3.5.38",
         "@types/cookie-parser": "^1.4.3",
-        "@types/csurf": "^1.11.2",
         "@types/escape-html": "^1.0.2",
         "@types/express": "4.17.21",
         "@types/express-session": "^1.17.5",
@@ -126,10 +124,10 @@
         "@types/safe-timers": "^1.1.0",
         "@types/semver": "^7.3.13",
         "@types/yargs": "^17.0.19",
-        "@typescript-eslint/eslint-plugin": "5.62.0",
-        "@typescript-eslint/parser": "5.62.0",
-        "eslint": "8.46.0",
-        "eslint-config-prettier": "8.6.0",
+        "@typescript-eslint/eslint-plugin": "^8.0.0",
+        "@typescript-eslint/parser": "^8.0.0",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.0.0",
         "jest": "29.7.0",
         "json-schema-to-typescript": "^11.0.2",
         "nx": "20.4.6",
