--- a/libs/schema-level-ii/package.json
+++ b/libs/schema-level-ii/package.json
@@ -1,6 +1,7 @@
 {
     "name": "@wildboar/schema-level-ii",
-    "version": "0.0.1",
+    "version": "1.0.0",
+    "description": "More X.500 directory schema from existing LDAP and X.500 schema",
     "private": true,
     "type": "commonjs",
     "main": "./src/index.js",
