--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     },
     "devDependencies": {
         "@docusaurus/module-type-aliases": "3.7.0",
+        "@nx/esbuild": "^20.4.6",
         "@nx/eslint": "20.4.6",
         "@nx/eslint-plugin": "20.4.6",
         "@nx/jest": "20.4.6",
@@ -129,6 +130,7 @@
         "@types/yargs": "^17.0.19",
         "@typescript-eslint/eslint-plugin": "^8.0.0",
         "@typescript-eslint/parser": "^8.0.0",
+        "esbuild": "^0.19.2",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-unused-imports": "^4.1.4",
