--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
         "@docusaurus/plugin-pwa": "3.7.0",
         "@docusaurus/preset-classic": "3.7.0",
         "@mdx-js/react": "^3.0.0",
-        "@nx/webpack": "20.4.6",
         "@prisma/client": "^6.4.1",
         "@wildboar/acse": "^1.0.7",
         "@wildboar/cms": "^1.0.6",
@@ -145,7 +144,6 @@
         "ts-jest": "29.1.1",
         "ts-node": "10.9.1",
         "tslib": "^2.4.1",
-        "typescript": "5.7.3",
-        "webpack-merge": "^5.8.0"
+        "typescript": "5.7.3"
     }
 }
