--- a/package.json
+++ b/package.json
@@ -99,13 +99,13 @@
     },
     "devDependencies": {
         "@docusaurus/module-type-aliases": "3.7.0",
-        "@nx/esbuild": "^20.4.6",
-        "@nx/eslint": "20.4.6",
-        "@nx/eslint-plugin": "20.4.6",
-        "@nx/jest": "20.4.6",
-        "@nx/js": "20.4.6",
-        "@nx/node": "20.4.6",
-        "@nx/workspace": "20.4.6",
+        "@nx/esbuild": "21.1.3",
+        "@nx/eslint": "21.1.3",
+        "@nx/eslint-plugin": "21.1.3",
+        "@nx/jest": "21.1.3",
+        "@nx/js": "21.1.3",
+        "@nx/node": "21.1.3",
+        "@nx/workspace": "21.1.3",
         "@swc-node/register": "~1.9.1",
         "@swc/core": "~1.5.7",
         "@swc/helpers": "~0.5.11",
@@ -131,12 +131,12 @@
         "@typescript-eslint/parser": "^8.0.0",
         "esbuild": "^0.19.2",
         "eslint": "^8.57.0",
-        "eslint-config-prettier": "^9.0.0",
+        "eslint-config-prettier": "10.1.5",
         "eslint-plugin-unused-imports": "^4.1.4",
         "jest": "29.7.0",
         "jest-environment-node": "^29.7.0",
         "json-schema-to-typescript": "^11.0.2",
-        "nx": "20.4.6",
+        "nx": "21.1.3",
         "prettier": "2.8.3",
         "prettier-plugin-organize-imports": "^3.2.2",
         "prisma": "^6.4.1",
