chore: use @tyler/duckhawk instead of bluebird

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@docusaurus/preset-classic": "3.7.0",
         "@mdx-js/react": "^3.0.0",
         "@prisma/client": "^6.4.1",
+        "@tyler/duckhawk": "npm:@jsr/tyler__duckhawk@^0.3.4",
         "@wildboar/acse": "npm:@jsr/wildboar__acse@^2.0.0",
         "@wildboar/asn1": "npm:@jsr/wildboar__asn1@^11.0.0",
         "@wildboar/cms": "npm:@jsr/wildboar__cms@^2.0.0",
@@ -53,7 +54,6 @@
         "@wildboar/x500": "npm:@jsr/wildboar__x500@^2.0.4",
         "@wildboar/x700": "npm:@jsr/wildboar__x700@^2.0.1",
         "basic-ftp": "^5.0.2",
-        "bluebird": "^3.7.2",
         "body-parser": "^1.20.1",
         "chalk": "^5.4.1",
         "class-transformer": "^0.5.1",
@@ -110,7 +110,6 @@
         "@swc-node/register": "~1.9.1",
         "@swc/core": "~1.5.7",
         "@swc/helpers": "~0.5.11",
-        "@types/bluebird": "^3.5.38",
         "@types/cookie-parser": "^1.4.3",
         "@types/escape-html": "^1.0.2",
         "@types/express": "4.17.21",
