chore: replace js-yaml with @std/yaml

--- a/apps/x500-cli/project.json
+++ b/apps/x500-cli/project.json
@@ -15,7 +15,7 @@
                 "outputFileName": "main.js",
                 "tsConfig": "apps/x500-cli/tsconfig.app.json",
                 "platform": "node",
-                "format": ["cjs"],
+                "format": ["esm"],
                 "assets": [
                     {
                         "glob": "**/*",
