--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@docusaurus/preset-classic": "3.7.0",
         "@mdx-js/react": "^3.0.0",
         "@prisma/client": "^6.4.1",
+        "@std/yaml": "npm:@jsr/std__yaml@^1.0.10",
         "@tyler/duckhawk": "npm:@jsr/tyler__duckhawk@^0.3.4",
         "@wildboar/acse": "npm:@jsr/wildboar__acse@^2.0.0",
         "@wildboar/asn1": "npm:@jsr/wildboar__asn1@^11.0.0",
@@ -75,7 +76,6 @@
         "i18next": "^21.8.16",
         "i18next-fs-backend": "^1.1.4",
         "is-debugging": "^1.0.1",
-        "js-yaml": "^4.1.0",
         "koa": "3.1.1",
         "lodash": "^4.17.21",
         "os-locale": "^5.0.0",
@@ -116,7 +116,6 @@
         "@types/express-session": "^1.17.5",
         "@types/fast-levenshtein": "^0.0.2",
         "@types/flat": "^5.0.2",
-        "@types/js-yaml": "^4.0.5",
         "@types/json-schema": "^7.0.11",
         "@types/koa": "3.0.1",
         "@types/node": "^22.10.5",
