--- a/libs/parity-schema/project.json
+++ b/libs/parity-schema/project.json
@@ -15,7 +15,7 @@
                 "outputFileName": "index.js",
                 "tsConfig": "libs/parity-schema/tsconfig.lib.json",
                 "platform": "node",
-                "format": ["cjs"]
+                "format": ["esm"]
             },
             "configurations": {
                 "development": {
