feat: use safe timers

--- a/libs/meerkat-types/tsconfig.json
+++ b/libs/meerkat-types/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "../../tsconfig.base.json",
+  "compilerOptions": {
+    "isolatedModules": true,
+    "isolatedDeclarations": true
+  },
   "files": [],
   "include": [],
   "references": [
