--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@wildboar/copp": "npm:@jsr/wildboar__copp@^2.0.0",
         "@wildboar/ldap": "npm:@jsr/wildboar__ldap@^2.0.1",
         "@wildboar/ocsp": "npm:@jsr/wildboar__ocsp@^2.0.1",
+        "@wildboar/pem": "npm:@jsr/wildboar__pem@^4.0.1",
         "@wildboar/pkcs": "npm:@jsr/wildboar__pkcs@^2.0.1",
         "@wildboar/pki-stub": "npm:@jsr/wildboar__pki-stub@^2.0.2",
         "@wildboar/platcert": "npm:@jsr/wildboar__platcert@^2.0.1",
@@ -84,7 +85,6 @@
         "passport": "^0.6.0",
         "passport-local": "^1.0.0",
         "passport-strategy": "^1.0.0",
-        "pem-ts": "^3.0.1",
         "phone": "^3.1.32",
         "prism-react-renderer": "^2.1.0",
         "react": "^18.2.0",
