--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
         "@logtape/logtape": "npm:@jsr/logtape__logtape@^1.2.0-dev.369+2dd942c9",
         "@mdx-js/react": "^3.0.0",
         "@prisma/client": "^6.4.1",
+        "@std/dotenv": "npm:@jsr/std__dotenv@^0.225.5",
+        "@std/html": "npm:@jsr/std__html@^1.0.5",
+        "@std/semver": "npm:@jsr/std__semver@^1.0.7",
         "@std/yaml": "npm:@jsr/std__yaml@^1.0.10",
         "@tyler/duckhawk": "npm:@jsr/tyler__duckhawk@^0.3.4",
         "@wildboar/acse": "npm:@jsr/wildboar__acse@^2.0.0",
@@ -59,25 +62,22 @@
         "@wildboar/x700": "npm:@jsr/wildboar__x700@^2.0.1",
         "basic-ftp": "^5.0.2",
         "body-parser": "^1.20.1",
-        "chalk": "^5.4.1",
-        "clsx": "^1.2.1",
+        "chalk": "5.6.2",
         "commander": "^10.0.0",
         "cookie-parser": "1.4.7",
-        "date-fns": "^2.29.3",
-        "dotenv": "^16.0.3",
+        "date-fns": "4.1.0",
         "email-addresses": "^5.0.0",
-        "escape-html": "^1.0.3",
         "express": "4.21.2",
         "express-handlebars": "8.x.x",
         "express-session": "^1.18.0",
-        "fast-levenshtein": "^3.0.0",
-        "flat": "^5.0.2",
+        "fastest-levenshtein": "1.0.16",
+        "flat": "6.0.1",
         "hbs": "^4.2.0",
         "i18n-iso-countries": "^7.5.0",
         "i18next": "^21.8.16",
         "i18next-fs-backend": "^1.1.4",
         "lodash": "^4.17.21",
-        "os-locale": "^5.0.0",
+        "os-locale": "6.0.2",
         "passport": "^0.6.0",
         "passport-local": "^1.0.0",
         "passport-strategy": "^1.0.0",
@@ -86,12 +86,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "reflect-metadata": "^0.1.13",
-        "rxjs": "^7.8.0",
-        "safe-timers": "1.1.0",
-        "semver": "^7.3.8",
         "serve-static": "^1.15.0",
         "tiny-typed-emitter": "^2.1.0",
-        "tslib": "^2.8.1",
         "yargs": "^17.7.2"
     },
     "devDependencies": {
@@ -111,7 +107,6 @@
         "@types/escape-html": "^1.0.2",
         "@types/express": "4.17.21",
         "@types/express-session": "^1.17.5",
-        "@types/fast-levenshtein": "^0.0.2",
         "@types/flat": "^5.0.2",
         "@types/json-schema": "^7.0.11",
         "@types/koa": "3.0.1",
