--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     },
     "private": true,
     "dependencies": {
+        "@bearz/dotenv": "npm:@jsr/bearz__dotenv@^0.1.0",
         "@docusaurus/core": "3.7.0",
         "@docusaurus/plugin-pwa": "3.7.0",
         "@docusaurus/preset-classic": "3.7.0",
         "@logtape/logtape": "npm:@jsr/logtape__logtape@^1.2.0-dev.369+2dd942c9",
         "@mdx-js/react": "^3.0.0",
         "@prisma/client": "^6.4.1",
-        "@std/dotenv": "npm:@jsr/std__dotenv@^0.225.5",
         "@std/html": "npm:@jsr/std__html@^1.0.5",
         "@std/semver": "npm:@jsr/std__semver@^1.0.7",
         "@std/yaml": "npm:@jsr/std__yaml@^1.0.10",
@@ -60,16 +60,17 @@
         "@wildboar/x400": "npm:@jsr/wildboar__x400@^2.0.1",
         "@wildboar/x500": "npm:@jsr/wildboar__x500@^2.0.4",
         "@wildboar/x700": "npm:@jsr/wildboar__x700@^2.0.1",
-        "basic-ftp": "^5.0.2",
-        "body-parser": "^1.20.1",
+        "basic-ftp": "5.0.5",
+        "body-parser": "2.2.1",
         "chalk": "5.6.2",
         "commander": "^10.0.0",
         "cookie-parser": "1.4.7",
         "date-fns": "4.1.0",
-        "email-addresses": "^5.0.0",
-        "express": "4.21.2",
-        "express-handlebars": "8.x.x",
-        "express-session": "^1.18.0",
+        "dotenv": "^16.6.1",
+        "email-addresses": "5.0.0",
+        "express": "5.1.0",
+        "express-handlebars": "8.0.4",
+        "express-session": "1.18.2",
         "fastest-levenshtein": "1.0.16",
         "flat": "6.0.1",
         "hbs": "^4.2.0",
@@ -78,16 +79,15 @@
         "i18next-fs-backend": "^1.1.4",
         "lodash": "^4.17.21",
         "os-locale": "6.0.2",
-        "passport": "^0.6.0",
-        "passport-local": "^1.0.0",
-        "passport-strategy": "^1.0.0",
-        "phone": "^3.1.32",
+        "passport": "0.7.0",
+        "passport-local": "1.0.0",
+        "passport-strategy": "1.0.0",
+        "phone": "3.1.67",
         "prism-react-renderer": "^2.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "reflect-metadata": "^0.1.13",
         "serve-static": "^1.15.0",
-        "tiny-typed-emitter": "^2.1.0",
+        "tiny-typed-emitter": "2.1.0",
         "yargs": "^17.7.2"
     },
     "devDependencies": {
