fix: bugs caused by switching groupByOID implementations

--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ MEERKAT_ATTR_CERT_CHAIN_FILE=data/attr-cert.pem
 MEERKAT_SENTINEL_DOMAIN=google.com
 MEERKAT_ADMINISTRATOR_EMAIL=jonathan@wilbur.space
 MEERKAT_INIT_JS=data/init.mjs
-# MEERKAT_BULK_INSERT_MODE=1
+MEERKAT_BULK_INSERT_MODE=1
 # There is no point in having different bind sleeps for different protocols,
 # because a nefarious attacker could just pick the protocol with the smallest
 # sleep and try to authenticate against that.
