doc: remove references to mysql

--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
 # DATABASE_URL=postgresql://postgres:example@localhost:5432/directory?schema=public
-# DATABASE_URL=mysql://root:example@localhost:3306/directory?connection_limit=40&pool_timeout=30
-# DATABASE_URL=mysql://user1:asdf1@localhost/directory1
-DATABASE_URL=mysql://root:example@localhost/directory
+DATABASE_URL=file:./dev.db
 MEERKAT_WEB_ADMIN_PORT=18080
 MEERKAT_WEB_ADMIN_AUTH_USERNAME=asdf
 MEERKAT_WEB_ADMIN_AUTH_PASSWORD=asdf
@@ -90,6 +88,9 @@ MEERKAT_ITOTS_PORT=11102
 # MEERKAT_TEST_HOST=dsa01.test.mkdemo.wildboar.software
 # MEERKAT_TEST_PORT=4632
 MEERKAT_LOG_LEVEL=debug
+# MEERKAT_LOG_JSON=1
+# NO_COLOR=1
+# MEERKAT_LOG_FILE=meerkat.log
 
 # Disable all requirements to receive signed results.
 MEERKAT_SIGNING_MIN_AUTH_LEVEL=0
