--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
         "@docusaurus/core": "3.7.0",
         "@docusaurus/plugin-pwa": "3.7.0",
         "@docusaurus/preset-classic": "3.7.0",
+        "@logtape/file": "npm:@jsr/logtape__file@^1.4.0-dev.421+de803af6",
         "@logtape/logtape": "npm:@jsr/logtape__logtape@^1.2.0-dev.369+2dd942c9",
+        "@logtape/syslog": "npm:@jsr/logtape__syslog@^1.4.0-dev.425+3cd75150",
         "@mdx-js/react": "^3.0.0",
         "@prisma/adapter-better-sqlite3": "^7.0.1",
-        "@prisma/adapter-mariadb": "^7.0.1",
         "@prisma/client": "^7.0.1",
         "@std/html": "npm:@jsr/std__html@^1.0.5",
         "@std/semver": "npm:@jsr/std__semver@^1.0.7",
