--- a/pkg/docker-compose.yaml
+++ b/pkg/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
     #   - .env
     environment:
       # What appears in this section overrides anything in .env.
-      DATABASE_URL: mysql://root:example@db:3306/directory
+      DATABASE_URL: file:./meerkat.db
       # MEERKAT_TLS_CERT_FILE: /data/keypair/cert.pem
       # MEERKAT_TLS_KEY_FILE: /data/keypair/key.pem
       # MEERKAT_SIGNING_CERTS_CHAIN_FILE: /data/keypair/cert.pem
@@ -40,7 +40,7 @@ services:
     #   - .env
     environment:
       # What appears in this section overrides anything in .env.
-      DATABASE_URL: mysql://root:example@db:3306/directory
+      DATABASE_URL: file:./meerkat.db
     command:
       - npx
       - prisma
@@ -50,23 +50,6 @@ services:
     depends_on:
       db:
         condition: service_started
-
-  db:
-    image: mysql
-    command: --default-authentication-plugin=mysql_native_password
-    # command: --default-authentication-plugin=mysql_native_password --slow-query-log=ON --slow-query-log-file=/var/lib/mysqllog/slow.log --long-query-time=2
-    restart: always
-    # This gets rid of the "mbind: Operation not permitted" error message in the MySQL logs.
-    # See: https://thegeekbin.com/mbind-operation-not-permitted-docker-mysql/
-    security_opt:
-      - "seccomp=unconfined"
-    environment:
-      MYSQL_ROOT_PASSWORD: example
-    # ports:
-    #   - '3306:3306/tcp'
-    # volumes:
-    #   - data:/var/lib/mysql
-      # - './data/mysql:/var/lib/mysqllog:rw'
 
 # volumes:
 #   data: {}
