--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "@std/yaml": "npm:@jsr/std__yaml@^1.0.10",
         "@tyler/duckhawk": "npm:@jsr/tyler__duckhawk@^0.3.4",
         "@wildboar/acse": "npm:@jsr/wildboar__acse@^2.0.0",
-        "@wildboar/asn1": "npm:@jsr/wildboar__asn1@^11.0.0",
+        "@wildboar/asn1": "npm:@jsr/wildboar__asn1@^11.0.4",
         "@wildboar/cms": "npm:@jsr/wildboar__cms@^2.0.0",
         "@wildboar/copp": "npm:@jsr/wildboar__copp@^2.0.0",
         "@wildboar/ldap": "npm:@jsr/wildboar__ldap@^2.0.1",
@@ -94,14 +94,14 @@
     },
     "devDependencies": {
         "@docusaurus/module-type-aliases": "3.7.0",
-        "@nx/esbuild": "22.1.0",
-        "@nx/eslint": "22.1.0",
-        "@nx/eslint-plugin": "22.1.0",
-        "@nx/js": "22.1.0",
-        "@nx/node": "22.1.0",
-        "@nx/vite": "22.1.0",
-        "@nx/vitest": "^22.1.0",
-        "@nx/workspace": "22.1.0",
+        "@nx/esbuild": "22.3.3",
+        "@nx/eslint": "22.3.3",
+        "@nx/eslint-plugin": "22.3.3",
+        "@nx/js": "22.3.3",
+        "@nx/node": "22.3.3",
+        "@nx/vite": "22.3.3",
+        "@nx/vitest": "22.3.3",
+        "@nx/workspace": "22.3.3",
         "@swc-node/register": "~1.9.1",
         "@swc/core": "~1.5.7",
         "@swc/helpers": "~0.5.11",
@@ -121,14 +121,14 @@
         "@types/yargs": "^17.0.19",
         "@typescript-eslint/eslint-plugin": "^8.47.0",
         "@typescript-eslint/parser": "^8.47.0",
-        "@vitest/coverage-v8": "^4.0.0",
+        "@vitest/coverage-v8": "4.0.9",
         "esbuild": "^0.27.0",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "10.1.5",
         "eslint-plugin-unused-imports": "^4.1.4",
         "jsdom": "~22.1.0",
         "json-schema-to-typescript": "^11.0.2",
-        "nx": "22.1.0",
+        "nx": "22.3.3",
         "prettier": "2.8.3",
         "prettier-plugin-organize-imports": "^3.2.2",
         "prisma": "^7.0.1",
@@ -137,6 +137,6 @@
         "tslib": "^2.4.1",
         "typescript": "5.9.x",
         "vite": "^7.0.0",
-        "vitest": "^4.0.0"
+        "vitest": "4.0.9"
     }
 }
