chore: remove eslint and prettier entirely
The number one thing I hate about Javascript development is all these fucking tools that constantly break because they cannot handle any change, and they give you cryptic, uninformative, or even misleading errors as to what the problem is. ESLint is almost never worth it.

--- a/apps/meerkat/project.json
+++ b/apps/meerkat/project.json
@@ -19,16 +19,16 @@
         "build": {
             "executor": "@nx/esbuild:esbuild",
             "outputs": ["{options.outputPath}"],
-            "defaultConfiguration": "development",
             "options": {
                 "main": "apps/meerkat/src/main.ts",
                 "outputPath": "dist/apps/meerkat",
-                "outputFileName": "main.js",
+                "outputFileName": "main.mjs",
                 "tsConfig": "apps/meerkat/tsconfig.app.json",
                 "platform": "node",
                 "format": ["esm"],
                 "generatePackageJson": true,
                 "esbuildOptions": {
+                    "minify": false,
                     "banner": {
                         "js": "#!/bin/env node"
                     },
@@ -53,14 +53,6 @@
                         "output": "."
                     }
                 ]
-            },
-            "configurations": {
-                "development": {
-                    "minify": false
-                },
-                "production": {
-                    "minify": true
-                }
             }
         },
         "serve": {
